@@ -1,3 +1,11 @@
+2006-06-13  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/totem-menu.c: (totem_languages_update),
+	(totem_subtitles_update):
+	  Pop down language/subtitle menus before replacing them
+	  with a different one, otherwise the session might lock
+	  up hard if a menu is replaced while being open (#342411).
+
 2006-06-11  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "mg" to ALL_LINGUAS.
